[package]
name = "myriadmesh-routing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
myriadmesh-protocol.workspace = true
myriadmesh-crypto = { path = "../myriadmesh-crypto" }
myriadmesh-dht = { path = "../myriadmesh-dht" }

# Serialization
serde.workspace = true
bincode.workspace = true

# Async runtime
tokio.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
blake2.workspace = true
rand.workspace = true

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance_routing"
harness = false
