[workspace]

[package]
name = "myriadmesh-dht-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
myriadmesh-dht = { path = ".." }
myriadmesh-protocol = { path = "../../../../myriadmesh-protocol/reference-impl" }

[[bin]]
name = "dht_routing_table"
path = "fuzz_targets/dht_routing_table.rs"
test = false
doc = false
bench = false
